// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas (credentialsbinding) 1`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas (credentialsbinding) 2`] = `
{
  "metadata": {
    "name": "azure-bar-quota",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas (secretbinding) 1`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas (secretbinding) 2`] = `
{
  "metadata": {
    "name": "azure-bar-quota",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return credentialsBinding 1`] = `
{
  "credentialsRef": {
    "kind": "Secret",
    "name": "aws-secret",
    "namespace": "garden-test",
  },
  "metadata": {
    "name": "aws-credentialsbinding",
    "namespace": "garden-test",
  },
  "provider": {
    "type": "aws",
  },
}
`;

exports[`stores > credential > should return dnsBindingList 1`] = `
[
  "aws-route53",
  "azure-dns",
  "azure-private-dns",
  "google-clouddns",
  "openstack-designate",
  "alicloud-dns",
  "infoblox-dns",
  "netlify-dns",
  "rfc2136",
]
`;

exports[`stores > credential > should return infrastructureBindingList 1`] = `
[
  "aws",
  "azure",
  "gcp",
  "openstack",
  "alicloud",
  "ironcore",
]
`;

exports[`stores > credential > should return secret 1`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "aws-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return secretBinding 1`] = `
{
  "metadata": {
    "name": "aws-secretbinding",
    "namespace": "garden-test",
  },
  "provider": {
    "type": "aws",
  },
  "secretRef": {
    "name": "aws-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return workloadIdentity 1`] = `undefined`;
